tweaked to Top 7

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122340888-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166051682-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -13,18 +13,17 @@
 
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Produce 48 Ranker</title>
+  <title>Chuang 2020 Ranker</title>
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <meta name="viewport" content="initial-scale = 2.0, maximum-scale=1.0" />
-  <link rel="icon" type="image/png" href="/favicon.png">
+  <link rel="icon" type="image/png" href="assets/favicon.png">
   <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto+Condensed:400,700" rel="stylesheet">
 </head>
 <body>
   <div id="top-banner">
-    <img id="banner-image" src="assets/logo_white.png"/>
-    <p id="banner-title">PRODUCE 48 RANKER</p>
-    <p id="banner-subtitle">Make your own top 12!</p>
+    <p id="banner-title">CHUANG 2020 RANKER</p>
+    <p id="banner-subtitle">Make your own God7!</p>
   </div>
   <div class="flex-container padded-box">
     <div>
@@ -38,14 +37,14 @@
         <div id="table__entry-container">
           <!-- <div class="table__entry">
             <div class="table__entry-icon">
-              <img class="table__entry-img" src="assets/trainees/LeeGaeun.jpg" />
+              <img class="table__entry-img" src="assets/trainees/ZhengNaixin.png" />
               <div class="table__entry-icon-border a-rank-border"></div>
               <img class="table__entry-check" src="assets/check.png"/>
             </div>
             <div class="table__entry-text">
-              <strong><span class="name">Lee Gaeun</span></strong>
-              <span class="hangul">(이가은)</span>
-              <span class="company">PLEDIS ENTERTAINMENT</span>
+              <strong><span class="name">Zheng Naixin</span></strong>
+              <span class="hangul">(郑乃馨)</span>
+              <span class="company">Huaying Yixing</span>
             </div>
           </div> -->
         </div>
@@ -57,8 +56,8 @@
           <label class="checkbox-label" for="show-eliminated">Show Eliminated (At Bottom)</label>
         </div>
         <div>
-          <input type="checkbox" name="show-top12" id="show-top12" onclick="showTop12Click(event)"/>
-          <label class="checkbox-label" for="show-top12">Show Current Top 12</label>
+          <input type="checkbox" name="show-top7" id="show-top7" onclick="showTop7Click(event)"/>
+          <label class="checkbox-label" for="show-top7">Show Current Top 7</label>
         </div>
       </div>
       <div id="sharelink-container">
@@ -71,17 +70,17 @@
       </div>
     </div>
     <div id="ranking__pyramid">
-      <div id="ranking__title"><strong>TOP 12</strong></div>
+      <div id="ranking__title"><strong>TOP 7+</strong></div>
       <div class="ranking__row">
         <!-- <div class="ranking__entry">
           <div class="ranking__entry-icon">
-            <img class="ranking__entry-img" src="assets/trainees/LeeGaeun.jpg" />
+            <img class="ranking__entry-img" src="assets/trainees/ZhengNaixin.png" />
             <div class="ranking__entry-icon-border a-rank-border"></div>
             <div class="ranking__entry-icon-badge">1</div>
           </div>
           <div class="ranking__row-text">
-            <div class="name"><strong>Lee Gaeun</strong></div>
-            <div class="company">PLEDIS ENT.</div>
+            <div class="name"><strong>Zheng Naixin</strong></div>
+            <div class="company">Huaying Yixing</div>
           </div>
         </div> -->
       </div>
