--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div id="table__entry-container">
           <!-- <div class="table__entry">
             <div class="table__entry-icon">
-              <img class="table__entry-img" src="assets/trainees/LeeGaeun.jpg" />
+              <img class="table__entry-img" src="assets/trainees/LeeGaeun.png" />
               <div class="table__entry-icon-border a-rank-border"></div>
               <img class="table__entry-check" src="assets/check.png"/>
             </div>
@@ -75,7 +75,7 @@
       <div class="ranking__row">
         <!-- <div class="ranking__entry">
           <div class="ranking__entry-icon">
-            <img class="ranking__entry-img" src="assets/trainees/LeeGaeun.jpg" />
+            <img class="ranking__entry-img" src="assets/trainees/LeeGaeun.png" />
             <div class="ranking__entry-icon-border a-rank-border"></div>
             <div class="ranking__entry-icon-badge">1</div>
           </div>
