--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Chuang 2020 Ranker</title>
+  <title>HATCH7 Season 2 Ranker</title>
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <meta name="viewport" content="initial-scale = 2.0, maximum-scale=1.0" />
   <link rel="icon" type="image/png" href="assets/favicon.png">
@@ -23,7 +23,7 @@
 <body>
   <div id="top-banner">
     <img id="banner-image" src="assets/logo.png"/>
-    <p id="banner-title">CHUANG 2020 RANKER</p>
+    <p id="banner-title">HATCH7 Season 2 Ranker</p>
     <p id="banner-subtitle">Make your own Top 7!</p>
   </div>
   <div class="flex-container padded-box">
