--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta name="viewport" content="initial-scale = 2.0, maximum-scale=1.0" />
   <link rel="icon" type="image/png" href="assets/favicon.png">
   <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto+Condensed:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto+Condensed:400,700|Montserrat:400,700" rel="stylesheet">
 </head>
 <body>
   <div id="top-banner">
