--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <img id="banner-image" src="assets/logo.png"/>
     <p id="banner-title">HATCH7 Season 2 Ranker</p>
     <p id="banner-subtitle">Make your own Top 7!</p>
-    <p><a href="https://hatch7.jcink.net/index.php">HATCH7 SEASON 2</a></p>
+    <br>
+    <p style="color:#fff;font-size:12px;"><a href="https://hatch7.jcink.net/index.php">HATCH7 SEASON 2</a></p>
   </div>
   <div class="flex-container padded-box">
     <div>
