--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p id="banner-title">HATCH7 Season 2 Ranker</p>
     <p id="banner-subtitle">Make your own Top 7!</p>
     <br>
-    <p style="color:#fff;font-size:12px;"><a href="https://hatch7.jcink.net/index.php">HATCH7 SEASON 2</a></p>
+    <p style="color:#fff;font-size:10px;"><a href="https://hatch7.jcink.net/index.php">HATCH7 SEASON 2</a> | <a href="https://hatch7s1.github.io/">HATCH7 SEASON 1 RANKER</a></p>
   </div>
   <div class="flex-container padded-box">
     <div>
