--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>HATCH7 Season 2 Ranker</title>
+  <title>ST7RS Ranker</title>
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <meta name="viewport" content="initial-scale = 2.0, maximum-scale=1.0" />
   <link rel="icon" type="image/png" href="assets/favicon.png">
@@ -23,10 +23,10 @@
 <body>
   <div id="top-banner">
     <img id="banner-image" src="assets/logo.png"/>
-    <p id="banner-title">HATCH7 Season 2 Ranker</p>
+    <p id="banner-title">ST7RS Top 7 Ranker</p>
     <p id="banner-subtitle">Make your own Top 7!</p>
     <br>
-    <p style="color:#fff;font-size:10px;"><a href="https://hatch7.jcink.net/index.php">HATCH7 SEASON 2</a> | <a href="https://hatch7s1.github.io/">HATCH7 SEASON 1 RANKER</a></p>
+    <p style="color:#fff;font-size:10px;"><a href="https://hatch7.jcink.net/index.php">YOUTUBE</a> | <a href="https://hatch7s1.github.io/">VOTING</a></p>
   </div>
   <div class="flex-container padded-box">
     <div>
@@ -77,8 +77,8 @@
       <div class="ranking__row">
         <!-- <div class="ranking__entry">
           <div class="ranking__entry-icon">
-            <img class="ranking__entry-img" src="assets/trainees/ZhengNaixin.png" />
-            <div class="ranking__entry-icon-border a-rank-border"></div>
+            <img class="ranking__entry-img" src="assets/trainees/Subin.png" />
+            <div class="ranking__entry-icon-border v-rank-border"></div>
             <div class="ranking__entry-icon-badge">1</div>
           </div>
           <div class="ranking__row-text">
