--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p id="banner-title">ST7RS Top 7 Ranker</p>
     <p id="banner-subtitle">Make your own Top 7!</p>
     <br>
-    <p style="color:#fff;font-size:10px;"><a href="https://hatch7.jcink.net/index.php">YOUTUBE</a> | <a href="https://hatch7s1.github.io/">VOTING</a></p>
+    <p style="color:#ffffff;font-size:10px;"><a href="https://hatch7.jcink.net/index.php">YOUTUBE</a> | <a href="https://hatch7s1.github.io/">VOTING</a></p>
   </div>
   <div class="flex-container padded-box">
     <div>
